<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="vs">VS</string>
    <string name="shots">Shots</string>
    <string name="goals">Goals</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="prev_match">Prev. Match</string>
    <string name="teams">Teams</string>
    <string name="matchs">Matchs</string>
    <string name="next_match">Next Match</string>
    <string name="favorites">Favorites</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (m)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
